--- a/src/main/resources/templates/products/addProduct.html
+++ b/src/main/resources/templates/products/addProduct.html
@@ -1,22 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
-<head>
-    <meta charset="UTF-8"/>
-    <title>Letts Shop</title>
-    <link rel="stylesheet" th:href="@{/css/.bootstrap.css}">
-    <script th:src="@{/js/bootstrap.js}" type="text/javascript"></script>
-    <link th:href="@{/css/letts_shop.css}" rel="stylesheet" />
-</head>
-<body>
+<head th:replace="fragments/fragment :: head"></head>
 
 <header th:replace="fragments/fragment :: header"></header>
 <div class="container">
-<form method="post" class="body-content">
+<form method="post" class="body-content" enctype="multipart/form-data">
     <div class="form-group">
         <label th:for="productName">Product Name
             <input class="form-control" th:field="${product.productName}" />
         </label>
-        <p th:errors="${product.productName}" class="error"></p>
+        <p th:errors="${product.productName}" class="errors"></p>
     </div>
     <div class="form-group">
         <label th:for="productDescription">Product Description
@@ -31,19 +24,23 @@
         <p class="errors" th:errors="${product.price}"></p>
     </div>
     <div class="form-group">
-        <label th:for="quantity">Number of Products</label>
+        <label th:for="quantity">Number of Products
         <input class="form-control" th:field="${product.quantity}">
+        </label>
         <p class="errors" th:errors="${product.quantity}"></p>
     </div>
     <div class="form-group">
-        <label th:for="image">Product Images:
-            <input type="file" th:field="product.imageFiles" multiple="multiple" />
+        <label th:for="files">Product Images:
+            <input type="file" name="files" multiple="multiple" />
         </label>
-        <p th:errors="product.imageFiles" class="errors"></p>
+<!--        <p th:errors="product.imageFiles" class="errors"></p>-->
     </div>
-    <input type="reset" class="btn btn-success" value="Reset">
+<!--    <input type="reset" class="btn btn-success" value="Reset">-->
     <input type="submit" value="Add Product" class="btn btn-success">
 </form>
+    <div th:if="errors">
+        <span th:text="${errors}"></span>
+    </div>
 </div>
 </body>
 </html>
