--- a/src/main/resources/templates/fragments/fragment.html
+++ b/src/main/resources/templates/fragments/fragment.html
@@ -3,7 +3,7 @@
 <head th:fragment="head">
     <meta charset="UTF-8"/>
     <title>Letts Shop</title>
-    <link rel="stylesheet" th:href="@{/css/.bootstrap.css}">
+    <link rel="stylesheet" th:href="@{/css/bootstrap.css}">
     <script th:src="@{/js/bootstrap.js}" type="text/javascript"></script>
     <link th:href="@{/css/letts_shop.css}" rel="stylesheet" />
 </head>
