--- a/src/main/resources/templates/fragments/fragment.html
+++ b/src/main/resources/templates/fragments/fragment.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head th:fragment="head">
-    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" charset="UTF-8"/>
     <title>Letts Shop</title>
-    <link rel="stylesheet" th:href="@{/css/bootstrap.css}">
-    <script th:src="@{/js/bootstrap.js}" type="text/javascript"></script>
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
+    <link rel="stylesheet" th:href="@{/css/bootstrap-image-checkbox.css}">
     <link th:href="@{/css/letts_shop.css}" rel="stylesheet" />
+    <script th:src="@{/js/bootstrap.bundle.min.js}" type="text/javascipt"></script>
+    <script th:src="@{/js/jquery-3.5.0.min.js}" type="text/javascipt"></script>
 </head>
 <body>
     <header th:fragment="header">
