--- a/src/main/resources/templates/products/viewProductDetail.html
+++ b/src/main/resources/templates/products/viewProductDetail.html
@@ -1,12 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
-<head>
-    <meta charset="UTF-8"/>
-    <title>View Product Details</title>
-    <link rel="stylesheet" th:href="@{/css/bootstrap.css}">
-    <link th:href="@{/css/letts_shop.css}" rel="stylesheet" />
-    <script th:src="@{/js/bootstrap.js}" type="text/javascript"></script>
-</head>
+
+<head th:replace="fragments/fragment :: head"></head>
 <body>
 
 <header th:replace="fragments/fragment :: header"></header>
@@ -16,14 +11,27 @@
         <h5>Details</h5>
         Product Name: <span class="errors" th:text="${product.productName}"></span><br/>
         Description: <span th:text="${product.productDescription}"></span><br/>
-        Price: <span th:text="${product.price}"></span><br/>
+        Price: <span th:text="'$' + ${product.price}"></span><br/>
         Quantity: <span th:text="${product.quantity}"></span><br/>
         <p>Following files are uploaded successfully.</p>
-    <ol th:each="image : ${images}">
-        <li>
-        <img th:src="${image}" />
-        </li>
-    </ol>
+<!--    <ul class="ulProductImages" th:each="image : ${images}">-->
+<!--        <li>-->
+<!--            <img class="productImages" th:src="'data:image/jpeg;base64,' + ${image}" />-->
+<!--        </li>-->
+<!--    </ul>-->
+<!--    <div class="cropImage">-->
+<!--        <th:block th:each="image : ${images}">-->
+<!--            <img class="productImages" th:src="'data:image/jpg;base64,' + ${image}"></img>-->
+<!--        </th:block>-->
+<!--    </div>-->
+        <div class="cropImage">
+            <th:block th:each="image : ${images}">
+                <figure>
+                    <img th:field="${#ids.next('images')}" class="productImages" th:src="'data:..w700/image/jpg;base64,' + ${image}"></img>
+                </figure>
+            </th:block>
+        </div>
+
 </div>
 
 </body>
